<resources>
    <string name="app_name">OpenNetClient</string>
    <!-- NavigationView Menu Items-->
    <string name="main_news">Главные новости</string>
    <string name="forum">Форум</string>
    <string name="topics">Тематика</string>
    <string name="safety">Проблемы безопасности</string>
    <string name="updates">Новые версии ПО</string>
    <string name="linux">Linux</string>
    <string name="BSD">BSD</string>
    <string name="Ubuntu">Ubuntu</string>
    <string name="Fedora">Fedora</string>
    <string name="mozilla">Mozilla/Firefox</string>
    <string name="favs">Избранное</string>
    <string name="preferences">Настройки</string>
    <!-- Placeholders-->
    <string name="dateview">7 января 2018 г., 6:41</string>
    <string name="titleview">Проект Elementary OS разрабатывает текстовый редактор для разработчиков</string>
    <string name="newsview">Разработчики Elementary OS с 2011 года развивают собственный текстовый редактор,
        который входил в базовую поставку под именем Scratch. Из-за того, что многие пользователи путали
        программу с визуальной средой программирования Scratch, редактор решено переименовать и отныне он
        будет поставляться под именем Code, по аналогии с другими приложениями Elementary
        (Files, Music, Videos, Calendar, Mail, Photos). Вне дистрибутива проект может упоминаться
        как "elementary Code".</string>
    <string name="pl_favs">Здесь будут сохранённые статьи</string>
    <string name="pl_date">9 января 2018</string>
    <string name="pl_title">Представлен новый дизайн SourceForge</string>
    <string name="pl_text_part">Разработчики проекта Solus, развивающего одноимённый дистрибутив
        GNU/Linux и окружение рабочего стола Budgie, представили первый выпуск пакета Linux Driver Management
        (LDM), предоставляющего библиотеку функций и инструментарий для быстрого определения
        состава аппаратного окружения текущей системы.
        Библиотека позволяет получить список имеющихся устройств и сопоставить каждое
        устройство с применяемыми для этого устройства драйверами или приложениями из
        репозитория. Код библиотеки написан на языке Си и распространяется под лицензией LGPL2.1. </string>
    <string name="pl_code_part">$ grep . /sys/devices/system/cpu/vulnerabilities/*
   /sys/devices/system/cpu/vulnerabilities/meltdown:Mitigation: PTI
   /sys/devices/system/cpu/vulnerabilities/spectre_v1:Vulnerable
   /sys/devices/system/cpu/vulnerabilities/spectre_v2:Vulnerable: Minimal generic SM retpoline</string>
    <string name="pl_list_part">В сборках для платформы Linux  вывод уведомлений,
        отправленных через Notifications API или chrome.notifications,
        теперь производится через штатные механизмы пользовательских окружений
        (например, уведомления Chrome теперь выводятся как обычные уведомления KDE Plasma и GNOME);
    </string>
    <string name="pl_link_part">OpenNews: Релиз Firefox 58</string>
    <string name="show_comments_button">ПОКАЗАТЬ КОММЕНТАРИИ</string>
    <!-- Hints-->
    <string name="delete_all_hint">Удалить всё</string>
    <string name="toast_all_deteted">Все статьи удалены</string>
    <string name="all_articles_already_deleted">Эта кнопка удаляет все статьи. Сохранённых статей пока нет.</string>
    <string name="share_button_hint">Поделиться</string>
    <string name="to_favs_button_hint">Сохранить</string>
    <string name="added_to_favs">Добавлено в избранные статьи</string>
    <string name="deleted_from_favs">Удалено из избранных статей</string>
    <string name="share_link_hint">Поделиться статьёй</string>
    <!-- AlertDialog -->
    <string name="proof_des">Удалить статью?</string>
    <string name="proof_des_all">Удалить все статьи?</string>
    <string name="cancel">ОТМЕНА</string>
    <string name="yes">УДАЛИТЬ</string>
    <!-- Settings-->
    <string name="common_cat">Общие</string>
    <string name="browser">Встроенный браузер</string>
    <string name="browser_des">Окрывать внешние ссылки через приложение, если это возможно</string>
    <string name="browser_key">b_key</string>
    <string name="theme">Ночная тема</string>
    <string name="theme_des">Тема изменится после перезапуска приложения</string>
    <string name="theme_key">t_key</string>
    <string name="about_cath">О программе</string>
    <string name="licence">Лицензии</string>
    <string name="licence_key">l_key</string>
    <string name="app_title">Проект OpenNET</string>
    <string name="app_subtitle">Неофициальное приложение под Android</string>
    <string name="app_key">a_key</string>
    <string name="app_vesion">0.7.2-alpha. Сборка от 09.02.2018</string>
    <string name="go_site">Посетить сайт opennet.ru</string>
    <string name="go_dev">Связаться с разработчиком</string>
    <string name="go_dev_key">dev_key</string>
    <string name="dev_email">carpuninnandroid@yandex.ru</string>
    <string name="no_email_clients">У Вас не установлено никаких почтовых клиентов</string>
    <!-- Alerts-->
    <string name="cannot_play_video">Невозможно воспроизвести видео</string>
    <string name="unsuccess_load">Неполучилось загрузить данные, проверьте подключение к сети</string>
    <string name="reload">Попробовать снова</string>
</resources>
