<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/main_item"
            android:title="@string/main_news"
            android:icon="@drawable/ic_main_news"
            android:checkable="true"/>
        <item android:title="@string/topics">
            <menu>
                <item
                    android:id="@+id/security_item"
                    android:title="@string/safety"
                    android:checkable="true"/>
                <item
                    android:id="@+id/updates_item"
                    android:title="@string/updates"
                    android:checkable="true"/>
                <item
                    android:id="@+id/linux_item"
                    android:title="@string/linux"
                    android:checkable="true"/>
                <item
                    android:id="@+id/bsd_item"
                    android:title="@string/BSD"
                    android:checkable="true"/>
                <item
                    android:id="@+id/ubuntu_item"
                    android:title="@string/Ubuntu"
                    android:checkable="true"/>
                <item
                    android:id="@+id/fedora_item"
                    android:title="@string/Fedora"
                    android:checkable="true"/>
                <item
                    android:id="@+id/mozilla_item"
                    android:title="@string/mozilla"
                    android:checkable="true"/>
            </menu>
        </item>
    </group>

<group android:id="@+id/last"
    android:checkableBehavior="single">
    <item
        android:id="@+id/favs_item"
        android:title="@string/favs"
        android:checkable="true"
        android:icon="@drawable/ic_favs"/>
    <item
        android:id="@+id/pref_item"
        android:title="@string/preferences"
        android:checkable="false"
        android:icon="@drawable/ic_preferences"/>
</group>
</menu>