<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
    <item
        android:id="@+id/main_item"
        android:title="@string/main_news"
        android:icon="@drawable/ic_news"
        android:checkable="true"/>
        <item
            android:id="@+id/forum_item"
            android:title="@string/forum"
            android:icon="@drawable/ic_forum"
            android:checkable="true"/>
        <item
            android:id="@+id/articles_item"
            android:title="@string/articles"
            android:icon="@drawable/ic_articles"
            android:checkable="true"/>
    </group>
    <group android:id="@+id/last"
           android:checkableBehavior="single">
        <item
            android:id="@+id/favs_item"
            android:title="@string/favs"
            android:checkable="true"
            android:icon="@drawable/ic_favs"/>
        <item
            android:id="@+id/pref_item"
            android:title="@string/preferences"
            android:checkable="false"
            android:icon="@drawable/ic_preferences"/>
    </group>
</menu>